# news

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirement.md
.github/workflows/: news-agent.yml  tests.yml
docs/plans/: 2026-02-21-news-agent-design.md  2026-02-21-news-agent-implementation.md
src/news_agent/: __init__.py  filter.py  main.py  models.py  storage.py
src/news_agent/notifier/: email.py  file.py  telegram.py
src/news_agent/sources/: ai_blogs.py  arxiv_papers.py  base.py  github_trending.py  hackernews.py  reddit.py  rss.py  twitter.py  v2ex.py  wired.py
src/news_agent/templates/: email.html
tests/: test_filter.py  test_main.py  test_models.py  test_storage.py
tests/test_notifier/: test_email.py  test_telegram.py
tests/test_sources/: test_arxiv_papers.py  test_github.py  test_hackernews.py  test_reddit.py  test_rss.py  test_v2ex.py
