[project]
name = "news-agent"
version = "0.1.0"
description = "A news aggregation agent with LLM-based filtering"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "litellm>=1.0",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "jinja2>=3.1",
    "playwright>=1.40",
    "pyyaml>=6.0",
    "python-telegram-bot>=21.0",
    "aiosmtplib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
]

[project.scripts]
news-agent = "news_agent.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
